app/dashboard/argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`argocd.dev.mp281x.xyz`)
      kind: Rule
      services: [{ name: argocd-server, port: 443 }]
