app/dashboard/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: traefik
  labels: { app: traefik-forward-auth }
spec:
  replicas: 1
  selector: { matchLabels: { app: traefik-forward-auth } }
  strategy: { type: Recreate }
  template:
    metadata: { labels: { app: traefik-forward-auth } }
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: thomseddon/traefik-forward-auth:2
          name: traefik-forward-auth
          ports: [{ containerPort: 4181, protocol: TCP }]
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: traefik
  labels: { app: traefik-forward-auth }
spec:
  type: ClusterIP
  selector: { app: traefik-forward-auth }
  ports: [{ name: auth-http, port: 4181, targetPort: 4181 }]

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: traefik
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  tls: { secretName: auth-cert }
  routes:
    - match: Host(`auth.dev.mp281x.xyz`)
      kind: Rule
      services: [{ name: traefik-forward-auth, port: 4181 }]
