app/dashboard/grafana.yaml
apiVersion: v1
kind: Namespace
metadata: { name: dashboard }

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: dashboard
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  tls: { secretName: grafana-cert }
  routes:
    - match: Host(`grafana.dev.mp281x.xyz`)
      kind: Rule
      services: [{ name: grafana, port: 80 }]
      middlewares: [{ name: auth-middleware }]

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: dashboard
spec:
  forwardAuth:
    address: https://auth.dev.mp281x.xyz/oauth2/auth
    trustForwardHeader: true
