app/dashboard/longhorn.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  tls: { secretName: longhorn-cert }
  routes:
    - match: Host(`longhorn.mp281x.xyz`)
      kind: Rule
      services: [{ name: longhorn-frontend, port: 80 }]
