app/dashboard/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`traefik.dev.mp281x.xyz`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
